--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,10 @@
 {
+    "repositories" : [
+        {
+            "type": "vcs",
+            "url": "https://github.com/rajeshtaneja/moodle-behat-extension"
+        }
+    ],
     "name": "moodle/moodle",
     "license": "GPL-3.0",
     "description": "Moodle - the world's open source learning platform",
@@ -7,6 +13,6 @@
     "require-dev": {
         "phpunit/phpunit": "5.4.*",
         "phpunit/dbUnit": "1.4.*",
-        "moodlehq/behat-extension": "3.32.2"
+        "moodlehq/behat-extension": "dev-mdl-55853"
     }
 }
